...
    <Screen
      parentType="View"
      edges={["bottom"]}
      style={styles.container}
      hasPaddingHorizontal={false}
    >
      <View testID="friends-screen" style={{ flex: 1 }}>
        <MagnetStoryList data={data?.stories ?? []} isLoading={isLoading} />

        <MagnetSearchBar
          onChangeText={onChangeText}
          style={styles.searchBar}
          EndComponent={
...
